
[project]
name = "shippo"
version = "4.1.0"
description = "Shipping API Python library (USPS, FedEx, UPS and more)"
authors = [{ name = "Shippo" },]
readme = "README-PYPI.md"
requires-python = ">=3.9.2"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]
license = { text = "MIT License" }

[tool.poetry]
repository = "https://github.com/goshippo/shippo-python-sdk.git"
packages = [
    { include = "shippo", from = "src" }
]
include = ["py.typed", "src/shippo/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/shippo/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
httpretty = "==1.1.4"
marshmallow = "==3.23.1"
mypy = "==1.15.0"
pylint = "==3.2.3"
pyright = "==1.1.398"
pytest = "==8.3.3"
pytest-asyncio = "==0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


